--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "msaDependencies": {
     "db": "@mysimpleapp/msa-db",
     "user": "@mysimpleapp/msa-user",
-    "utils": "@mysimpleapp/msa-utils"
+    "utils": "@mysimpleapp/msa-utils",
+    "sheet": "@mysimpleapp/msa-sheet"
   }
 }
